# django-amnesia-honeywords

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  traffic.yml
docs/: configuration.md  deployment.md  integration.md  releasing.md
example_project/: settings.py  settings_prod.py  settings_test.py
honeychecker/: Dockerfile
honeychecker/honeychecker/: app.py  db.py  models.py
src/django_honeywords/: admin.py  amnesia_service.py  apps.py  backend.py  checks.py  conf.py  events.py  generator.py  honeychecker_client.py  models.py  policy.py  service.py  signals.py
src/django_honeywords/management/commands/: amnesia_init_user.py  honeywords_init_user.py
src/django_honeywords/migrations/: 0001_initial.py  0002_honeywordevent.py  0003_honeyworduserstate.py
tests/: test_admin.py  test_amnesia_a1_models.py  test_amnesia_a2_core.py  test_amnesia_a3_backend.py  test_amnesia_a4_command.py  test_amnesia_a5_integration.py  test_generator.py  test_phase1_mvp.py  test_phase2_backend.py  test_phase3_events.py  test_phase3_policy.py  test_phase4_remote.py
traffic_data/: clones_2026-06-17.json  clones_2026-06-18.json  clones_2026-06-19.json  clones_2026-06-20.json  clones_2026-06-21.json  clones_2026-06-22.json  clones_2026-06-23.json  clones_2026-06-24.json  clones_2026-06-25.json  clones_2026-06-26.json  clones_2026-06-27.json  clones_2026-06-28.json  clones_2026-06-29.json  clones_2026-06-30.json  clones_2026-07-01.json  clones_2026-07-02.json  clones_2026-07-03.json  clones_2026-07-04.json  clones_2026-07-05.json  clones_2026-07-06.json  clones_2026-07-07.json  clones_2026-07-08.json  clones_2026-07-09.json  clones_2026-07-10.json  clones_2026-07-11.json  clones_2026-07-12.json  clones_2026-07-13.json  clones_2026-07-14.json  clones_2026-07-15.json  clones_2026-07-16.json  clones_2026-07-17.json  paths_2026-06-17.json  paths_2026-06-21.json  paths_2026-06-24.json  paths_2026-06-26.json  paths_2026-07-01.json  paths_2026-07-05.json  paths_2026-07-11.json  paths_2026-07-17.json  summary_2026-06-17.json  (+61 more)
