[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "django-amnesia-honeywords"
version = "0.0.1"
description = "Amnesia honeywords implementation for Django — breach detection without a separate honeychecker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "David Iliopoulos" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/iliopdavid/django-amnesia-honeywords"
Repository = "https://github.com/iliopdavid/django-amnesia-honeywords"
Issues = "https://github.com/iliopdavid/django-amnesia-honeywords/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-django>=4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "example_project.settings_test"
pythonpath = ["src", "."]